add-prevent-copy-text

--- a/DocumentViewerPOC/Views/Home/Privacy.cshtml
+++ b/DocumentViewerPOC/Views/Home/Privacy.cshtml
@@ -17,7 +17,8 @@
                 Document = @"~/Documents/TassniefWF.pdf"
     };
     documentViewer.AllowedPermissions = DocumentViewerPermissions.All;
-    documentViewer.DeniedPermissions = DocumentViewerPermissions.Download | DocumentViewerPermissions.Print |DocumentViewerPermissions.DownloadAsPdf;
+    documentViewer.DeniedPermissions = DocumentViewerPermissions.Download 
+    | DocumentViewerPermissions.Print |DocumentViewerPermissions.DownloadAsPdf| DocumentViewerPermissions.SelectText;
 }
 
 <title>Document Viewer</title>
