prevent-copy-text

--- a/DocumentViewerPOC/Views/Home/Index.cshtml
+++ b/DocumentViewerPOC/Views/Home/Index.cshtml
@@ -16,6 +16,7 @@
                 Height = 600,
                 Document = @"~/Documents/TassniefWF.pdf"
     };
+     documentViewer.DeniedPermissions = DocumentViewerPermissions.SelectText;
 }
 
 <title>Document Viewer</title>
