--- a/DocumentViewerPOC/Views/Home/Index.cshtml
+++ b/DocumentViewerPOC/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             {
                 Width = 800,
                 Height = 600,
-                Document = @"~/Documents/TassniefWF.pdf"
+                Document = @"~/Documents/Document.docx"
     };
      documentViewer.DeniedPermissions = DocumentViewerPermissions.SelectText;
 }
